--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/iorust/rstatic"
 repository = "https://github.com/iorust/rstatic.git"
 readme = "README.md"
 keywords = ["file", "static", "server"]
-license = "MIT"
+license = "MIT/Apache-2.0"
 
 [dependencies]
 iron = "*"
