--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rstatic"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Qing Yan <admin@zensh.com>"]
 description = "Static file serve by Rust"
 documentation = "https://github.com/iorust/rstatic"
@@ -11,15 +11,19 @@ keywords = ["file", "static", "server"]
 license = "MIT/Apache-2.0"
 
 [dependencies]
-iron = "*"
-mount = "*"
+iron = "^0.2.6"
+mount = "^0.0.9"
 
 [dependencies.staticfile]
-version = "*"
+version = "0.1.0"
+# features = ["cache"]
+
+[dependencies.staticdir]
+version = "0.3.1"
 # features = ["cache"]
 
 [dependencies.clap]
-version = "*"
+version = "^1.5.5"
 default-features = false
 features = ["color"]
 
